openehr_am/_generated/OpenEHRPathParser.py
# Generated from /Users/rubentalstra/PycharmProjects/pyopenehr-am/grammars/path/OpenEHRPath.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OpenEHRPathParser ( Parser ):

    grammarFileName = "OpenEHRPath.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'/'" ]

    symbolicNames = [ "<INVALID>", "SLASH", "PREDICATE", "IDENT", "WS" ]

    RULE_path = 0
    RULE_segment = 1
    RULE_predicate = 2

    ruleNames =  [ "path", "segment", "predicate" ]

    EOF = Token.EOF
    SLASH=1
    PREDICATE=2
    IDENT=3
    WS=4

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(OpenEHRPathParser.SLASH)
            else:
                return self.getToken(OpenEHRPathParser.SLASH, i)

        def segment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OpenEHRPathParser.SegmentContext)
            else:
                return self.getTypedRuleContext(OpenEHRPathParser.SegmentContext,i)


        def EOF(self):
            return self.getToken(OpenEHRPathParser.EOF, 0)

        def getRuleIndex(self):
            return OpenEHRPathParser.RULE_path

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPath" ):
                listener.enterPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPath" ):
                listener.exitPath(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPath" ):
                return visitor.visitPath(self)
            else:
                return visitor.visitChildren(self)




    def path(self):

        localctx = OpenEHRPathParser.PathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_path)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 6
            self.match(OpenEHRPathParser.SLASH)
            self.state = 7
            self.segment()
            self.state = 12
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 8
                self.match(OpenEHRPathParser.SLASH)
                self.state = 9
                self.segment()
                self.state = 14
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 15
            self.match(OpenEHRPathParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SegmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(OpenEHRPathParser.IDENT, 0)

        def predicate(self):
            return self.getTypedRuleContext(OpenEHRPathParser.PredicateContext,0)


        def getRuleIndex(self):
            return OpenEHRPathParser.RULE_segment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSegment" ):
                listener.enterSegment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSegment" ):
                listener.exitSegment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSegment" ):
                return visitor.visitSegment(self)
            else:
                return visitor.visitChildren(self)




    def segment(self):

        localctx = OpenEHRPathParser.SegmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_segment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self.match(OpenEHRPathParser.IDENT)
            self.state = 19
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 18
                self.predicate()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PREDICATE(self):
            return self.getToken(OpenEHRPathParser.PREDICATE, 0)

        def getRuleIndex(self):
            return OpenEHRPathParser.RULE_predicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicate" ):
                listener.enterPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicate" ):
                listener.exitPredicate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate" ):
                return visitor.visitPredicate(self)
            else:
                return visitor.visitChildren(self)




    def predicate(self):

        localctx = OpenEHRPathParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_predicate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self.match(OpenEHRPathParser.PREDICATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





